# django-procurement-api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENTS_PROMPT.md  AGENTS_SPEC.md  ARCHITECTURE.md  DOMAIN.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
api/: admin.py  apps.py  filters.py  middleware.py  models.py  openapi.py  permissions.py  serializers.py  signals.py  throttles.py  urls.py  views.py
api/management/: email_service.py
api/migrations/: 0001_initial.py  0002_alter_order_user.py  0002_category_parameter_shop_alter_user_is_active_contact_and_more.py  0003_alter_contact_value_alter_productparameter_value.py  0003_remove_contact_type_remove_contact_value_and_more.py  0004_alter_shop_url.py  0005_user_admin_type_shop_owner_status_timestamps.py  0006_catalog_offer_order_item_statuses.py  0007_domain_numeric_constraints.py  0008_offer_snapshots_basket_constraints.py  0009_import_job_model.py
api/services/: __init__.py  admin_api.py  basket.py  contacts.py  email_service.py  orders.py  products.py  shop_data.py  shops.py
api/tests/: base.py  test_auth.py  test_basket.py  test_contacts.py  test_e2e_scenarios.py  test_health.py  test_import_api.py  test_load_import.py  test_load_shop_data.py  test_logging.py  test_models.py  test_orders.py  test_products.py  test_race_conditions.py  test_role_api.py  (+3 more)
core/: settings.py  test_settings.py  urls.py  wsgi.py
data/: shop1.yaml  shop2.yaml  shop3.yaml  shop4.yaml
docs/: TEST.md  api.md  django.md  docs.md  env.md  technical_specification.md
(+1 files in other folders)
