[project]
name = "django-procurement-api"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.2.15",
    "django-filter>=25.2",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "djoser>=2.3.3",
    "drf-spectacular>=0.29.0",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
]
[dependency-groups]
dev = [
    "coverage>=7.13.0",
    "django-stubs[compatible-mypy]>=6.0.5",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pre-commit-hooks>=6.0.0",
    "ruff>=0.15.16",
    "ty>=0.0.46",
    "uv>=0.11.16",
]

# 1. mypy ----
[tool.mypy]
python_version = "3.10"
plugins = ["mypy_django_plugin.main"]
ignore_missing_imports = true
cache_dir = "/dev/null"

[tool.django-stubs]
django_settings_module = "core.settings"

# 2. ty ----
[tool.ty.environment]
python-version = "3.10"

[tool.ty.rules]
invalid-method-override = "ignore"

# 3. Ruff ----
[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E266", "E501"]

# 4. Coverage ----
[tool.coverage.run]
branch = true
source = ["api"]
omit = [
    "api/migrations/*",
    "api/tests/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 85
